@@ -130,7 +130,7 @@ if ($result->rowCount()==1) {
 				<span style="font-size: 90%"><i></i></span>
 			</td>
 			<td class="right">
-				<input name="password" id="password" maxlength=20 value="" type="password" style="width: 300px">
+				<input name="password" id="password" maxlength=30 value="" type="password" style="width: 300px">
 				<script type="text/javascript">
 					var password=new LiveValidation('password');
 					password.add(Validate.Presence);
@@ -143,7 +143,7 @@ if ($result->rowCount()==1) {
 				<span style="font-size: 90%"><i></i></span>
 			</td>
 			<td class="right">
-				<input name="passwordNew" id="passwordNew" maxlength=20 value="" type="password" style="width: 300px">
+				<input name="passwordNew" id="passwordNew" maxlength=30 value="" type="password" style="width: 300px">
 				<script type="text/javascript">
 					var passwordNew=new LiveValidation('passwordNew');
 					passwordNew.add(Validate.Presence);
@@ -174,7 +174,7 @@ if ($result->rowCount()==1) {
 				<span style="font-size: 90%"><i></i></span>
 			</td>
 			<td class="right">
-				<input name="passwordConfirm" id="passwordConfirm" maxlength=20 value="" type="password" style="width: 300px">
+				<input name="passwordConfirm" id="passwordConfirm" maxlength=30 value="" type="password" style="width: 300px">
 				<script type="text/javascript">
 					var passwordConfirm=new LiveValidation('passwordConfirm');
 					passwordConfirm.add(Validate.Presence);
